<resources>
    <string name="app_name">Musical Structure</string>
    <string name="your_playlists">Your playlists</string>
    <string name="recent_activity">Recent activity</string>
    <string name="song1">--- Song1</string>
    <string name="song2">--- Song2</string>
    <string name="song3">--- Song3</string>
    <string name="friend1">--- Friend1</string>
    <string name="friend2">--- Friend2</string>
    <string name="friend3">--- Friend3</string>
    <string name="play">Play</string>
    <string name="library">Library</string>
    <string name="recommendations">Recommended</string>
    <string name="playing">Playing now</string>
    <string name="playlists">Playlists</string>
    <string name="playlist_name">Playlist name</string>
    <string name="recommended_songs">Recommended songs</string>
    <string name="friends_recommendations">Songs shared with you</string>
    <string name="play_pause">Play/Pause</string>
    <string name="prev_song">Prev. song</string>
    <string name="next_song">Next song</string>
    <string name="recommendations_description">"This encapsulates two main features: the song recommendations generated by our song suggestion engine, and also the songs that were recommended by the friends. Each friend item  contains the list of the songs shared by the friends, that could be just separate songs sent, or the entire playlists or albums. That functionality could be implemented using the Spotify Apps API (both for music suggestions and for music sharing): https://developer.spotify.com/. And also SetList.fm, particularly for music discovery/suggestions: http://api.setlist.fm/docs/index.html "</string>
    <string name="playing_now_description">This activity does exactly what its name says - provided the music playback functionality for the app. It should work in a way that the music keeps playing even if the app is not active (in the background). This functionality can be implemented using Android MediaPlayer APIs. Here are the link to the documentation: https://developer.android.com/reference/android/media/MediaPlayer.html, https://developer.android.com/guide/topics/media/mediaplayer.html</string>
    <string name="playlist_content_description">This activity displays the content of the playlist that the user selected. The playlist functionality can be achieved using the Spotify API and SetList.fm API. Here are the link to the documentation: http://api.setlist.fm/docs/index.html, https://developer.spotify.com/</string>
    <string name="playlist_description">This activity is the first and the main screen of the app. It combines some of the playback features (allowing the user play the recent songs) and also it houses the playlists that the user has (and lists the most popular of them). To implement that functionality I would use both Android MediaPlayer APIs and Spotify APIs. Here are the link that have all the needed information to accomplish the desired results: https://developer.android.com/reference/android/media/MediaPlayer.html, https://developer.android.com/guide/topics/media/mediaplayer.html, https://developer.spotify.com/</string>

</resources>
