<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructure.PlaylistsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/recommended"
                style="@style/ControlBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#AED581"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/recommendations" />

            <Button
                android:id="@+id/playing_now"
                style="@style/ControlBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CE93D8"
                android:text="@string/playing" />

        </LinearLayout>

        <TextView
            style="@style/Headers"
            android:gravity="center_horizontal"
            android:text="@string/your_playlists" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cover1"
                    style="@style/PlaylistThumbnails"
                    android:src="@drawable/cover4" />

                <ImageView
                    android:id="@+id/cover2"
                    style="@style/PlaylistThumbnails"
                    android:src="@drawable/cover2" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cover3"
                    style="@style/PlaylistThumbnails"
                    android:src="@drawable/cover3" />

                <ImageView
                    android:id="@+id/cover4"
                    style="@style/PlaylistThumbnails"
                    android:src="@drawable/cover4" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            style="@style/Headers"
            android:gravity="center_horizontal"
            android:text="@string/recent_activity" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/play1"
                style="@style/PlayButtons" />

            <TextView
                style="@style/SongItems"
                android:layout_toLeftOf="@id/play1"
                android:text="@string/song1" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/play2"
                style="@style/PlayButtons" />

            <TextView
                style="@style/SongItems"
                android:layout_toLeftOf="@id/play2"
                android:text="@string/song2" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/play3"
                style="@style/PlayButtons" />

            <TextView
                style="@style/SongItems"
                android:layout_toLeftOf="@id/play3"
                android:text="@string/song3" />

        </RelativeLayout>

        <TextView
            style="@style/ActivityDescription"
            android:autoLink="web"
            android:text="@string/playlist_description" />
    </LinearLayout>
</ScrollView>